# SuperHer

./: .gitignore  SuperHer - Solution Draft & Implementation Plan (MVP).md  SuperHer_Security_and_Privacy_Document.md  aws_setup_guide.md  docker-compose.prod.yml  docker-compose.yml  manual_deploy.md  notes.md  security_review.md  tree-2.1.1.tgz
backend/: Dockerfile.prod  README.md  __init__.py  check_adv.py  debug_adv.py  debug_list.py  journey_notes.md  pyproject.toml  repro_delete.py  run_migrations.sh  verify_output.txt  verify_output_2.txt  verify_revenue_share.py  verify_schema.py
backend/app/: main.py
backend/app/core/: cognito.py  config.py  database.py  deps.py  exceptions.py  security.py
backend/app/models/: __init__.py  admin.py  advertiser.py  campaign.py  click_event.py  coupon.py  customer_event.py  influencer.py  tracking_link.py  user.py
backend/app/schemas/: advertiser.py  campaign.py  common.py  coupon.py  event.py  influencer.py  tracking.py  user.py
backend/app/services/: __init__.py  attribution.py  email.py  forecast.py  stats.py
backend/migrations/: env.py
backend/migrations/versions/: 27cce23e7b84_add_currency_to_advertiser.py  2817f8625652_add_name_to_users_table.py  45764ae62158_add_campaign_model.py  5bd9ae5b5d0b_add_indices_for_stats_aggregation.py  78f51a108b32_add_name_to_api_keys.py  (+7 more)
backend/scripts/: cleanup_data.py  dash_test.py  debug_data.py  debug_payout.py  simulate_traffic.py  test_advertiser_api.py  test_campaign_api.py  test_db_connection.py  test_influencer_api.py  verify_phase4.py  verify_phase5_stats.py
(+61 files in other folders)
